/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

    plugins {
        id 'org.springframework.boot' version '3.2.5'
        id 'io.spring.dependency-management' version '1.1.4'
        
        id 'java'
        id 'application'
    }

repositories {
 
    mavenCentral()
}

dependencies {
    // 웹소켓 기능
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    
    // Spring Data JPA 추가 (데이터베이스 작업을 위함)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // PostgreSQL 드라이버 (runtimeOnly로 변경)
    runtimeOnly 'org.postgresql:postgresql'

    // Spring Security 추가
    implementation 'org.springframework.boot:spring-boot-starter-security'
    
    
    // JWT 라이브러리 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    
    // 롬복 (보일러플레이트 코드 감소)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // 테스트용
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
  
    mainClass = 'backend.App'
}

tasks.named('test') {

    useJUnitPlatform()
}
